only need Customer Acount page

--- a/CarRentalManagementSystem.Web/Views/Customer/CustomerAccountPageView.cshtml
+++ b/CarRentalManagementSystem.Web/Views/Customer/CustomerAccountPageView.cshtml
@@ -8,10 +8,10 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>CustomerView</title>
+    <title>CustomerAccountPageView</title>
 </head>
 <body>
-    <div>Customer view
+    <div> 
     </div>
 </body>
 </html>
