--- a/CarRentalManagementSystem.Web/Views/Company/CompanyView.cshtml
+++ b/CarRentalManagementSystem.Web/Views/Company/CompanyView.cshtml
@@ -1,17 +1,26 @@
-﻿
+﻿@model IEnumerable<CarRental.Models.Concretes.Companies>
+
 @{
-    Layout = null;
+    ViewBag.Title = "Company Main Page";
 }
 
-<!DOCTYPE html>
+<h2>@ViewBag.Title</h2>
 
+<!DOCTYPE html>
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>CompanyView</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="~/Contents/EmployeesMainPages.css">
 </head>
 <body>
-    <div> 
+    <div class="navbar">
+        <div class="subnav" style="float:right">
+            @Html.ActionLink("Çalışanlar", "CompanysEmployeesView") |
+            @Html.ActionLink("Araçlarım", "CompanysVehiclesView") |
+            @Html.ActionLink("Kiralamalar", "CompanysRentedVehiclesView")
+        </div>
     </div>
+    <h2>Hpşgeldiniz</h2>
+    <h3>BHangi İşlemi Yapmak İstersiniz?</h3>
 </body>
 </html>
